logs/Slang/chapter-6/6.16.9--string_atohex.sv.log
name: string_atohex
description: string.atohex()  tests
should_fail: 0
tags: 6.16.9
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.9--string_atohex.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.9--string_atohex.sv:9:11: error: invalid member access for type 'string'
	int b = a.atohex();
	        ~^~~~~~~
